# python101

./: .flake8  .gitignore  README.md  bankaccount.py  decimal_arithmetic.ipynb  extended_unpacking.ipynb  function_introspection.ipynb  number_to_base.ipynb  outro_python.ipynb  pyproject.toml  requests_test.ipynb  test_bank_account-with_kluivert.ipynb
02 - Installing and Running Python/: demo.ipynb  demo.py  requirements.txt
03 - Python Basics/02 - Basic Data Types/: basic-data-types.ipynb
03 - Python Basics/03 - Objects/: objects.ipynb
03 - Python Basics/04 - Variables/: Variables.ipynb
03 - Python Basics/05 - Arithmetic Operators/: Arithmetic Operators.ipynb
03 - Python Basics/06 - Operator Precedence/: Operator Precedence.ipynb
03 - Python Basics/07 - Integer Division and Modulus/: Integer Division and Modulus.ipynb
03 - Python Basics/08 - Comparison Operators/: Comparison Operators.ipynb
03 - Python Basics/09 - Boolean Operators/: Boolean Operators.ipynb
03 - Python Basics/10 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb
04 - Conditional Execution/02 - if_else/: if_else.ipynb
04 - Conditional Execution/03 - elif/: elif.ipynb
04 - Conditional Execution/04 - ternary conditional operator/: Ternary Conditional Operator.ipynb
04 - Conditional Execution/05 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb  elapsed_seconds.py  elapsed_seconds_more.py
05 - Sequence Types/03 - Tuples/: Tuples.ipynb
15 - Practice Test 1/: Exam 1.ipynb
27 - Practice Test 2/: Exam 2.ipynb
32 - Practice Test 3/: Exam 3.ipynb
(+134 files in other folders)
